# contracts-gen/openapi.json
@@ -7,16 +7,12 @@
             "additionalProperties": {
               "type": "string"
             },
-            "type": [
-              "null",
-              "object"
-            ]
+            "nullable": true,
+            "type": "object"
           },
           "contextKey": {
-            "type": [
-              "null",
-              "string"
-            ]
+            "nullable": true,
+            "type": "string"
           },
           "flagKeys": {
             "items": {
@@ -42,11 +38,7 @@
           },
           "snapshotVersion": {
             "format": "int64",
-            "pattern": "^-?(?:0|[1-9]\\d*)$",
-            "type": [
-              "integer",
-              "string"
-            ]
+            "type": "integer"
           }
         },
         "required": [
@@ -69,17 +61,13 @@
       "ConversionRequest": {
         "properties": {
           "contextKey": {
-            "type": [
-              "null",
-              "string"
-            ]
+            "nullable": true,
+            "type": "string"
           },
           "experimentId": {
             "format": "uuid",
-            "type": [
-              "null",
-              "string"
-            ]
+            "nullable": true,
+            "type": "string"
           },
           "flagKey": {
             "type": "string"
@@ -92,18 +80,12 @@
           },
           "value": {
             "format": "double",
-            "pattern": "^-?(?:0|[1-9]\\d*)(?:\\.\\d+)?$",
-            "type": [
-              "null",
-              "number",
-              "string"
-            ]
+            "nullable": true,
+            "type": "number"
           },
           "variantKey": {
-            "type": [
-              "null",
-              "string"
-            ]
+            "nullable": true,
+            "type": "string"
           }
         },
         "required": [
@@ -135,10 +117,8 @@
       "CreateExperimentRequest": {
         "properties": {
           "conversionGoal": {
-            "type": [
-              "null",
-              "string"
-            ]
+            "nullable": true,
+            "type": "string"
           },
           "flagKey": {
             "type": "string"
@@ -173,23 +153,20 @@
             "type": "string"
           },
           "rollout": {
+            "nullable": true,
             "oneOf": [
-              {
-                "type": "null"
-              },
               {
                 "$ref": "#/components/schemas/RolloutDto"
               }
-            ]
+            ],
+            "type": "object"
           },
           "targetingRules": {
             "items": {
               "$ref": "#/components/schemas/TargetingRuleDto"
             },
-            "type": [
-              "null",
-              "array"
-            ]
+            "nullable": true,
+            "type": "array"
           }
         },
         "required": [
@@ -207,16 +184,12 @@
             "additionalProperties": {
               "type": "string"
             },
-            "type": [
-              "null",
-              "object"
-            ]
+            "nullable": true,
+            "type": "object"
           },
           "contextKey": {
-            "type": [
-              "null",
-              "string"
-            ]
+            "nullable": true,
+            "type": "string"
           },
           "flagKey": {
             "type": "string"
@@ -242,17 +215,11 @@
           },
           "snapshotVersion": {
             "format": "int64",
-            "pattern": "^-?(?:0|[1-9]\\d*)$",
-            "type": [
-              "integer",
-              "string"
-            ]
+            "type": "integer"
           },
           "variantKey": {
-            "type": [
-              "null",
-              "string"
-            ]
+            "nullable": true,
+            "type": "string"
           }
         },
         "required": [
@@ -267,10 +234,8 @@
       "ExperimentResponse": {
         "properties": {
           "conversionGoal": {
-            "type": [
-              "null",
-              "string"
-            ]
+            "nullable": true,
+            "type": "string"
           },
           "createdAt": {
             "format": "date-time",
@@ -301,11 +266,7 @@
           },
           "version": {
             "format": "int64",
-            "pattern": "^-?(?:0|[1-9]\\d*)$",
-            "type": [
-              "integer",
-              "string"
-            ]
+            "type": "integer"
           }
         },
         "required": [
@@ -334,19 +295,11 @@
           },
           "totalConversions": {
             "format": "int64",
-            "pattern": "^-?(?:0|[1-9]\\d*)$",
-            "type": [
-              "integer",
-              "string"
-            ]
+            "type": "integer"
           },
           "totalExposures": {
             "format": "int64",
-            "pattern": "^-?(?:0|[1-9]\\d*)$",
-            "type": [
-              "integer",
-              "string"
-            ]
+            "type": "integer"
           }
         },
         "required": [
@@ -380,14 +333,13 @@
             "type": "string"
           },
           "rollout": {
+            "nullable": true,
             "oneOf": [
-              {
-                "type": "null"
-              },
               {
                 "$ref": "#/components/schemas/RolloutDto"
               }
-            ]
+            ],
+            "type": "object"
           },
           "status": {
             "type": "string"
@@ -404,11 +356,7 @@
           },
           "version": {
             "format": "int64",
-            "pattern": "^-?(?:0|[1-9]\\d*)$",
-            "type": [
-              "integer",
-              "string"
-            ]
+            "type": "integer"
           }
         },
         "required": [
@@ -459,11 +407,7 @@
           },
           "expiresInSeconds": {
             "format": "int32",
-            "pattern": "^-?(?:0|[1-9]\\d*)$",
-            "type": [
-              "integer",
-              "string"
-            ]
+            "type": "integer"
           },
           "refreshToken": {
             "type": "string"
@@ -510,37 +454,25 @@
       "ProblemDetails": {
         "properties": {
           "detail": {
-            "type": [
-              "null",
-              "string"
-            ]
+            "nullable": true,
+            "type": "string"
           },
           "instance": {
-            "type": [
-              "null",
-              "string"
-            ]
+            "nullable": true,
+            "type": "string"
           },
           "status": {
             "format": "int32",
-            "pattern": "^-?(?:0|[1-9]\\d*)$",
-            "type": [
-              "null",
-              "integer",
-              "string"
-            ]
+            "nullable": true,
+            "type": "integer"
           },
           "title": {
-            "type": [
-              "null",
-              "string"
-            ]
+            "nullable": true,
+            "type": "string"
           },
           "type": {
-            "type": [
-              "null",
-              "string"
-            ]
+            "nullable": true,
+            "type": "string"
           }
         },
         "type": "object"
@@ -560,11 +492,7 @@
         "properties": {
           "percentage": {
             "format": "int32",
-            "pattern": "^-?(?:0|[1-9]\\d*)$",
-            "type": [
-              "integer",
-              "string"
-            ]
+            "type": "integer"
           },
           "salt": {
             "type": "string"
@@ -584,11 +512,7 @@
           },
           "version": {
             "format": "int64",
-            "pattern": "^-?(?:0|[1-9]\\d*)$",
-            "type": [
-              "integer",
-              "string"
-            ]
+            "type": "integer"
           }
         },
         "required": [
@@ -646,23 +570,20 @@
             "type": "string"
           },
           "rollout": {
+            "nullable": true,
             "oneOf": [
-              {
-                "type": "null"
-              },
               {
                 "$ref": "#/components/schemas/RolloutDto"
               }
-            ]
+            ],
+            "type": "object"
           },
           "targetingRules": {
             "items": {
               "$ref": "#/components/schemas/TargetingRuleDto"
             },
-            "type": [
-              "null",
-              "array"
-            ]
+            "nullable": true,
+            "type": "array"
           }
         },
         "required": [
@@ -680,11 +601,7 @@
           },
           "weight": {
             "format": "int32",
-            "pattern": "^-?(?:0|[1-9]\\d*)$",
-            "type": [
-              "integer",
-              "string"
-            ]
+            "type": "integer"
           }
         },
         "required": [
@@ -697,41 +614,23 @@
         "properties": {
           "conversionRatePercent": {
             "format": "double",
-            "pattern": "^-?(?:0|[1-9]\\d*)(?:\\.\\d+)?(?:[eE][+-]?\\d+)?$",
-            "type": [
-              "number",
-              "string"
-            ]
+            "type": "number"
           },
           "conversions": {
             "format": "int64",
-            "pattern": "^-?(?:0|[1-9]\\d*)$",
-            "type": [
-              "integer",
-              "string"
-            ]
+            "type": "integer"
           },
           "exposures": {
             "format": "int64",
-            "pattern": "^-?(?:0|[1-9]\\d*)$",
-            "type": [
-              "integer",
-              "string"
-            ]
+            "type": "integer"
           },
           "sharePercent": {
             "format": "double",
-            "pattern": "^-?(?:0|[1-9]\\d*)(?:\\.\\d+)?(?:[eE][+-]?\\d+)?$",
-            "type": [
-              "number",
-              "string"
-            ]
+            "type": "number"
           },
           "variantKey": {
-            "type": [
-              "null",
-              "string"
-            ]
+            "nullable": true,
+            "type": "string"
           }
         },
         "required": [
@@ -749,7 +648,7 @@
     "title": "OptiPulse.Api | v1",
     "version": "1.0.0"
   },
-  "openapi": "3.1.1",
+  "openapi": "3.0.4",
   "paths": {
     "/api/v1/auth/login": {
       "post": {
@@ -787,7 +686,7 @@
           }
         },
         "tags": [
-          "OptiPulse.Api"
+          "Authentication"
         ]
       }
     },
@@ -810,7 +709,7 @@
           }
         },
         "tags": [
-          "OptiPulse.Api"
+          "Authentication"
         ]
       }
     },
@@ -830,7 +729,7 @@
           }
         },
         "tags": [
-          "OptiPulse.Api"
+          "Authentication"
         ]
       }
     },
@@ -870,7 +769,7 @@
           }
         },
         "tags": [
-          "OptiPulse.Api"
+          "Authentication"
         ]
       }
     },
@@ -900,7 +799,7 @@
           }
         },
         "tags": [
-          "OptiPulse.Api"
+          "Evaluation"
         ]
       }
     },
@@ -930,7 +829,7 @@
           }
         },
         "tags": [
-          "OptiPulse.Api"
+          "Evaluation"
         ]
       }
     },
@@ -962,7 +861,7 @@
           }
         },
         "tags": [
-          "OptiPulse.Api"
+          "Experiments"
         ]
       },
       "post": {
@@ -1010,7 +909,7 @@
           }
         },
         "tags": [
-          "OptiPulse.Api"
+          "Experiments"
         ]
       }
     },
@@ -1051,7 +950,7 @@
           }
         },
         "tags": [
-          "OptiPulse.Api"
+          "Experiments"
         ]
       },
       "put": {
@@ -1130,7 +1029,7 @@
           }
         },
         "tags": [
-          "OptiPulse.Api"
+          "Experiments"
         ]
       }
     },
@@ -1191,7 +1090,7 @@
           }
         },
         "tags": [
-          "OptiPulse.Api"
+          "Experiments"
         ]
       }
     },
@@ -1214,7 +1113,7 @@
           }
         },
         "tags": [
-          "OptiPulse.Api"
+          "Flags"
         ]
       },
       "post": {
@@ -1262,7 +1161,7 @@
           }
         },
         "tags": [
-          "OptiPulse.Api"
+          "Flags"
         ]
       }
     },
@@ -1302,7 +1201,7 @@
           }
         },
         "tags": [
-          "OptiPulse.Api"
+          "Flags"
         ]
       },
       "put": {
@@ -1380,7 +1279,7 @@
           }
         },
         "tags": [
-          "OptiPulse.Api"
+          "Flags"
         ]
       }
     },
@@ -1430,7 +1329,7 @@
           }
         },
         "tags": [
-          "OptiPulse.Api"
+          "Flags"
         ]
       }
     },
@@ -1490,7 +1389,7 @@
           }
         },
         "tags": [
-          "OptiPulse.Api"
+          "Flags"
         ]
       }
     },
@@ -1510,7 +1409,7 @@
           }
         },
         "tags": [
-          "OptiPulse.Api"
+          "Evaluation"
         ]
       }
     },
@@ -1550,7 +1449,7 @@
           }
         },
         "tags": [
-          "OptiPulse.Api"
+          "Telemetry"
         ]
       }
     },
@@ -1580,14 +1479,26 @@
           }
         },
         "tags": [
-          "OptiPulse.Api"
+          "Telemetry"
         ]
       }
     }
   },
   "tags": [
     {
-      "name": "OptiPulse.Api"
+      "name": "Authentication"
+    },
+    {
+      "name": "Evaluation"
+    },
+    {
+      "name": "Flags"
+    },
+    {
+      "name": "Experiments"
+    },
+    {
+      "name": "Telemetry"
     }
   ]
 }
